--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emailjs/browser": "^4.3.3",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.3",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5"
   },
